# rr_openrover_stack

./: .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.circleci/: config.yml
config/: twist_mux_locks.yaml  twist_mux_topics.yaml
include/rr_openrover_basic/: odom_control.hpp  openrover.hpp
launch/: 2wd_teleop.launch  example.launch  teleop.launch
msg/: RawRrOpenroverBasic.msg  RawRrOpenroverBasicMedRateData.msg  RawRrOpenroverBasicSlowRateData.msg
rr_control_input_manager/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
rr_control_input_manager/config/: input_topics.yaml  test.yaml
rr_control_input_manager/launch/: example.launch  test.launch
rr_control_input_manager/scripts/: control_input_manager.py  ps4_mapper.py  xbox_mapper.py
rr_control_input_manager/test/: control_input_manager.test  test.py  test_functional.py  test_latency.py
rr_openrover_basic/: CMakeLists.txt  README.md  package.xml
rr_openrover_basic/config/: twist_mux_locks.yaml  twist_mux_topics.yaml
rr_openrover_basic/include/rr_openrover_basic/: constants.hpp  odom_control.hpp  openrover.hpp
rr_openrover_basic/launch/: 2wd_teleop.launch  teleop.launch
rr_openrover_basic/scripts/: diagnostics.py
rr_openrover_basic/src/: openrover_basic.cpp
rr_openrover_basic_msgs/: CMakeLists.txt  package.xml
rr_openrover_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_openrover_description/launch/: description-2wd.launch  description-4wd.launch  description.launch
rr_openrover_description/meshes/2WD_Rover/: LeftFrontTire.stl  LeftRearCastorHousing.stl  LeftRearCastorWheel.stl  RightFrontTire.stl  RightRearCastorHousing.stl  RightRearCastorWheel.stl
rr_openrover_description/meshes/4WD_Rover/: LeftFrontWheel.stl  LeftRearWheel.stl  RightFrontWheel.stl  RightRearWheel.stl
rr_openrover_description/scripts/: env_run
rr_openrover_description/urdf/: 2WD_rover.urdf.xacro  4WD_rover.gazebo.xacro  4WD_rover.urdf.xacro  accessories.urdf.xacro
rr_openrover_description/urdf/2WD_Rover/: 2WD_rover.gazebo.xacro  2WD_rover.urdf.xacro
rr_openrover_description/urdf/4WD_Rover/: 4WD_rover.gazebo.xacro  4WD_rover.urdf.xacro
rr_openrover_description/urdf/accessories/: SLAM_pack.urdf.xacro  accessories.urdf.xacro
rr_openrover_description/urdf/configs/: 4WD_Rover  4WD_Rover_with_SLAM_Pack
rr_openrover_driver/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rr_openrover_driver/config/: ps4_controller_config.yaml  twist_mux_topics.yaml
rr_openrover_driver/include/rr_openrover_driver/: constants.hpp  odom_control.hpp  openrover.hpp
rr_openrover_driver/launch/: 2wd_teleop.launch  3d_mapping.launch  4wd_auto_dock.launch  4wd_teleop.launch  4wd_teleop_test.launch  example.launch  slampack_bringup.launch  starterkit_bringup.launch  teleop.launch
rr_openrover_driver/scripts/: diagnostics.py
rr_openrover_driver/src/: odom_control.cpp  openrover_driver.cpp
rr_openrover_driver_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_openrover_driver_msgs/msg/: RawRrOpenroverDriverFastRateData.msg  RawRrOpenroverDriverMedRateData.msg  SmartBatteryStatus.msg
rr_openrover_navigation/: CMakeLists.txt  package.xml
rr_openrover_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
rr_openrover_navigation/rviz/: default.rviz
rr_openrover_ros1/: package.xml
rr_openrover_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_openrover_simulation/launch/gazebo/: 2wd_rover_gazebo.launch  2wd_rover_gazebo_teleop.launch  4wd_rover_gazebo.launch  4wd_rover_gazebo_teleop.launch
rr_openrover_simulation/launch/rviz/: 2wd_rover_rviz.launch  4wd_rover_rviz.launch
rr_openrover_stack/: CHANGELOG.rst  CMakeLists.txt  package.xml
rr_rover_zero_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rr_rover_zero_driver/config/: ps4_controller_config.yaml  ps4_driver_config.yaml  twist_mux_topics.yaml
rr_rover_zero_driver/driver/roboclaw_driver/: roboclaw.py
rr_rover_zero_driver/launch/: example.launch  teleop.launch
rr_rover_zero_driver/scripts/: rover_zero.py
scripts/: control_input_manager.py  diagnostics.py  joystick.py  rover_driver.py  xbox_mapper.py
src/: odom_control.cpp  openrover_basic.cpp  openrover_basic_node.cpp  openrover_lib.cpp
