<?xml version="1.0"?>
<package format="2">
  <name>rr_openrover_basic</name>
  <version>0.0.2</version>
  <description>The rr_openrover_basic package</description>

  <maintainer email="nick@roverrobotics.com">nick fragale</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
