<?xml version="1.0"?>
<package format="2">
  <name>rr_openrover_driver_msgs</name>
  <version>0.7.3</version>
  <description>The rr_openrover_driver_msgs package</description>

  <maintainer email="nickpadilla@roverrobotics.com">Nicholas Padilla</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
