<?xml version="1.0"?>
<package format="2">
  <name>rr_openrover_stack</name>
  <version>0.7.4</version>
  <description>
    Packages related to the operation of Rover Robotics rover hardware.  This includes a client
    for interfacing with the hardware (rr_openrover_driver) and a tool for filtering time stamped
    velocity commands (rr_control_input_manager).
  </description>

  <maintainer email="nickpadilla@roverrobotics.com">Nick Padilla</maintainer>


  <license>BSD</license>

  <exec_depend>rr_openrover_driver</exec_depend>
  <exec_depend>rr_openrover_driver_msgs</exec_depend>
  <exec_depend>rr_control_input_manager</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
