<?xml version="1.0"?>
<package format="2">
  <name>rr_openrover_stack</name>
  <version>2.0.0</version>
  <description>
    Packages related to the operation of Rover Robotics rover hardware.  This includes a client
    for interfacing with the hardware (rr_openrover_driver) and a tool for filtering time stamped
    velocity commands (rr_control_input_manager).
  </description>

  <maintainer email="john@roverrobotics.com">John Bartholomew</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rr_openrover_driver</exec_depend>
  <exec_depend>rr_rover_zero_driver</exec_depend>
  <exec_depend>rr_openrover_driver_msgs</exec_depend>
  <exec_depend>rr_control_input_manager</exec_depend>
  <exec_depend>rr_openrover_description</exec_depend>
  <exec_depend>rr_openrover_simulation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
