<?xml version="1.0"?>
<package format="2">
  <name>rr_rover_zero_driver</name>
  <version>1.0.0</version>
  <description>The rover_zero_driver package</description>
  <maintainer email="nickp@todo.todo">nickp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>python-serial</exec_depend>
</package>