<?xml version="1.0"?>
<package format="2">
  <name>rr_rover_zero_driver</name>
  <version>1.1.1</version>
  <description>The rover_zero_driver package</description>
  <maintainer email="nickp@todo.todo">nickp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python_orocos_kdl</depend>
  <depend>python-serial</depend>
</package>
